Added Samples for Hayseed

--- a/voice.html
+++ b/voice.html
@@ -66,7 +66,10 @@
                             <p>Made for the <a href="https://itch.io/jam/nanoreno-2019">NaNoReNo2019</a> game jam, Beneath the Skies is a steam punk visual novel that follows the tale of four misfits as they fight back against a powerful invading force.</p>
                             <h3>Role: Bentis</h3>
                             <h3>Audio Samples</h3>
-                            <p>Coming Soon</p>
+                            <div>
+                                <a href="audio/ElbarSamp1.mp3" style="text-decoration:none;"><button class="presButton" style="background-color:#233b86">Elbar Sample 1</button></a>
+                                <a href="audio/ElbarSamp2.mp3" style="text-decoration:none;"><button class="presButton" style="background-color:#233b86">Elbar Sample 2</button></a>
+                            </div>
                         </div>
                     </td>
                 </tr>
@@ -84,9 +87,9 @@
                             <p>A voice acting competition run by Chuck Huber where the winner gets a contracted session with Sentai Filmworks. I made it into the semi-finalists round.</p>
                             <h3>Audio Samples</h3>
                             <div>
-                                    <a href="audio/NVT3r1.mp3" style="text-decoration:none;"><button class="presButton" style="background-color:#233b86">Round 1</button></a>
-                                    <a href="audio/NVT3r2.mp3" style="text-decoration:none;"><button class="presButton" style="background-color:#233b86">Round 2</button></a>
-                                    <a href="video/KamWatson_NVT3r3Final.mov" style="text-decoration:none;"><button class="presButton" style="background-color:#233b86">Round 3</button></a>
+                                <a href="audio/NVT3r1.mp3" style="text-decoration:none;"><button class="presButton" style="background-color:#233b86">Round 1</button></a>
+                                <a href="audio/NVT3r2.mp3" style="text-decoration:none;"><button class="presButton" style="background-color:#233b86">Round 2</button></a>
+                                <a href="video/KamWatson_NVT3r3Final.mov" style="text-decoration:none;"><button class="presButton" style="background-color:#233b86">Round 3</button></a>
                             </div>
                         </div>
                         
