Started work on About Page, organized Voice Page

--- a/about.html
+++ b/about.html
@@ -26,8 +26,31 @@
                 <img class="banner" src="images/menu/img_smMic.jpg" style="-webkit-filter: grayscale(90%); filter: grayscale(90%);" alt="Voice">
             </a>
     </div>
-    <div>
-        <h1>Coming Soon</h1>
+    <div class="container" id="main">
+        <div class="pres">
+            <h1 style="background-color:#2f8623; color:#ededed">Who is Kam?</h1>
+            <table>
+                <tr>
+                    <td>
+                        <div class="presIMG">
+                            <p>Put an Image of Kam Here</p>
+                            <p>Put some Contact Info in here as well</p>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <div class="presCont">
+                            <h2>Kameron is a self-trained Graphic Artist</h2>
+                            <p>What started as a youngtime hobby of switching faces on people turned into a horrible addiction to graphic design.</p>
+                            <p>Ever since I started down this rabbit hole of a profession, I devised lesson plans for my Highschool's Graphic Design class, made posters for local Reno Theaters and various online voice projects. I've even had promotional materials of my own design published in a few newspapers!</p>
+                            <h2>Kameron is a Professional Voice Actor</h2>
+                            <p>asdfasdfsadfsadfasdfasdf</p>
+                        </div>
+                    </td>
+                </tr>
+            </table>
+        </div>
     </div>
 </body>
 </html>
