--- a/voice.html
+++ b/voice.html
@@ -54,6 +54,7 @@
                 <button class="tablink" onclick="openPage('Commercial', this)" id="defaultOpen">Commercial</button>
                 <button class="tablink" onclick="openPage('Hobby', this)">Hobby</button>
             </div>
+            <!-- COMMERCIAL PROJECTS ---------------------------------------------------------------------------------------------------------------------------------------------------------------------->
             <div id="Commercial" class="tabcontent">
                 <table>
                 <!-- The Hayseed Knight -->
@@ -147,6 +148,7 @@
                 </tr>
                 </table>
             </div>
+            <!-- HOBBY PROJECTS -------------------------------------------------------------------------------------------------------------------------------------------------------------------->
             <div id="Hobby" class="tabcontent">
                 <table>
                 <!-- Ghostbusters -->
