New Website Design push!

--- a/404.html
+++ b/404.html
@@ -1,35 +1,48 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>KamVox</title>
+    <title>KamVox 404</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="index.css">
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow" rel="stylesheet"> 
+    <link rel="stylesheet" type="text/css" href="main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
 </head>
-    <!-- New Website Version. Lets do this! -->
 <body>
-    
-    <!-- Top Banner -->
-    <div class="container">
-        <div class="topper" style="background-color: #383434;">
-            <a class="title" href="http://kamvox.com"> <h1 class="title">Link Error</h1> </a>
+    <!------ Header ------>
+    <div id="Header" class="containerHead">
+        <div class="header">
+        <a href="www.kamvox.com"><h1 class="title">KamVox</h1></a>
         </div>
     </div>
-
-    <div class="container">
-        <a href="http://kamvox.com/artwork/" style="text-decoration:none;">
-            <img class="banner" src="images/menu/img_smBrush.jpg" alt="Visual">
-        </a>
-        <a href="http://kamvox.com/about/" style="text-decoration:none;">
-            <img class="banner" src="images/menu/img_smQuestion.jpg" alt="About">
-        </a>
-        <a href="http://kamvox.com/voice/" style="text-decoration:none;">
-            <img class="banner" src="images/menu/img_smMic.jpg" alt="Voice">
-        </a>
+    <!------ Sidebar ------>
+    <div id="Sidebar" class="containerSidebar">
+        <div class="sidebar">
+            <a href="www.kamvox.com/commercial.html"><h1 class="side">Commercial</h1></a>
+            <a href="www.kamvox.com/hobby.html"><h1 class="side">Hobby</h1></a>
+            <!-- <h1 class="side">Resume</h1> -->
+        </div>
+        <div class="sidebar" style="text-align: center;">
+            <h1 class="side" style="text-align: left;">Demo Reel</h1>
+            <audio controls style="width:84% ;margin: 1rem"><source src="audio/VoiceSamples/NVT3r2.mp3" type="audio/mpeg"></audio>
+        </div>
+        <div class="sidebar" style="text-align: center;">
+            <h1 class="side"style="text-align: left;">Social</h1>
+            <a href="https://twitter.com/CasualKameron"><img class="soclogo" style="display: inline-block;" src="Images/Logos/logo_Twitter.png" alt="Twitter"></a>
+            <a href="https://www.youtube.com/channel/UCiV3TPBff7y4JNF7r3g5OLQ"><img class="soclogo" style="display: inline-block;" src="Images/Logos/logo_Youtube.png" alt="logo_Youtube"></a>
+            <a href="https://www.imdb.com/name/nm9330677/"><img class="soclogo" style="display: inline-block;" src="Images/Logos/logo_IMDB.png" alt="IMDB"></a>
+        </div>
+        <div class="sidebar">
+            <a href="mailto:kam@kamvox.com>"><h1 class="side">Email</h1></a>
+        </div>
+    </div>
+    <!------ Project Tabs ------>
+    <div id="Projects" class="containerTab">
+        <h1 style="padding-left: 0rem; text-align: center; font-size: 8rem; padding-right: 8rem;">Game Over</h1>
+        <h2 style="padding-left: 0rem; text-align: center; font-size: 5rem; padding-right: 16rem;">The page you are looking for is lost to time... or never existed in the first place</h2>
+        
     </div>
 
-    <div>
-        <h1>Coming Soon</h1>
-    </div>
+
+</div>
+
 </body>
 </html>
