--- a/Old/404.html
+++ b/Old/404.html
@@ -1,35 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>KamVox: 404</title>
+    <title>KamVox</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="index.css">
-    <link href="https://fonts.googleapis.com/css?family=Poor+Story" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow" rel="stylesheet"> 
 </head>
-
+    <!-- New Website Version. Lets do this! -->
 <body>
-    <ul class="sidenav" style="text-align:center;">
-        <div class="topper">
-            <h1>KAM VOX</h1>
-                <div class="subtitle">
-                    <b>I am <i>error.</i></b>
-                </div>
-            <hr>
-        </div>
-        <li><a href="/">Voice Work</a></li>
-        <li><a href="./posters.html">Posters</a></li>
-        <li><a href="./contact.html">Contact</a></li>
-		<li><a href="https://twitter.com/casualkameron?lang=en">Follow Me on Twitter</a></li>
-		</ul>
-
-    <div class="content">
-        <div class="container">
-            <h1>
-                <b>WOW you found the secret page!</b>
-            </h1>
-            <p>Either you tried to get tricksy with the url or I messed something up.</p>
-            <p>Regardless of the cause I'd recommend returning to another page.</p>
+    
+    <!-- Top Banner -->
+    <div class="container">
+        <div class="topper" style="background-color: #383434;">
+            <a class="title" href="http://kamvox.com"> <h1 class="title">Link Error</h1> </a>
         </div>
     </div>
 
+    <div class="container">
+        <a href="http://kamvox.com/artwork/" style="text-decoration:none;">
+            <img class="banner" src="images/menu/img_smBrush.jpg" alt="Visual">
+        </a>
+        <a href="http://kamvox.com/about/" style="text-decoration:none;">
+            <img class="banner" src="images/menu/img_smQuestion.jpg" alt="About">
+        </a>
+        <a href="http://kamvox.com/voice/" style="text-decoration:none;">
+            <img class="banner" src="images/menu/img_smMic.jpg" alt="Voice">
+        </a>
+    </div>
+
+    <div>
+        <h1>Coming Soon</h1>
+    </div>
 </body>
+</html>
