--- a/404.html
+++ b/404.html
@@ -10,14 +10,14 @@
     <!------ Header ------>
     <div id="Header" class="containerHead">
         <div class="header">
-        <a href="www.kamvox.com"><h1 class="title">KamVox</h1></a>
+        <a href="http://kamvox.com"><h1 class="title">KamVox</h1></a>
         </div>
     </div>
     <!------ Sidebar ------>
     <div id="Sidebar" class="containerSidebar">
         <div class="sidebar">
-            <a href="www.kamvox.com/commercial.html"><h1 class="side">Commercial</h1></a>
-            <a href="www.kamvox.com/hobby.html"><h1 class="side">Hobby</h1></a>
+            <a href="http://kamvox.com/commercial.html"><h1 class="side">Commercial</h1></a>
+            <a href="http://kamvox.com/hobby.html"><h1 class="side">Hobby</h1></a>
             <!-- <h1 class="side">Resume</h1> -->
         </div>
         <div class="sidebar" style="text-align: center;">
