Fixed further links, moved old directory to zip to save space

--- a/commercial.html
+++ b/commercial.html
@@ -17,8 +17,8 @@
     <!------ Sidebar ------>
     <div id="Sidebar" class="containerSidebar">
         <div class="sidebar">
-            <a href="http://kamvox.com/commercial.html"><h1 class="side">Commercial</h1></a>
-            <a href="http://kamvox.com/hobby.html"><h1 class="side">Hobby</h1></a>
+            <a href="http://kamvox.com/commercial"><h1 class="side">Commercial</h1></a>
+            <a href="http://kamvox.com/hobby"><h1 class="side">Hobby</h1></a>
             <!-- <h1 class="side">Resume</h1> -->
         </div>
         <div class="sidebar" style="text-align: center;">
