--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="containerIndex">
         <img class="indexImg" src="images/menu/Index.png">
         <h1 class="indexTitleText">K a m V o x</h1>
-        <a href="http://kamvox.com/commercial.html"><h2 class="indexFlashText">Click here to Start</h2></a>
+        <a href="http://kamvox.com/commercial"><h2 class="indexFlashText">Click here to Start</h2></a>
     </div>
     
 </body>
