NEW DESIGN! Added a new front page and css. Kept the FF7 style but moved to and 'old page' section.

--- a/index.html
+++ b/index.html
@@ -1,18 +1,80 @@
 <!DOCTYPE html>
+
 <html>
-<head>
-    <title>KamVox</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="main.css">
-    <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
-</head>
-    <!-- Kamvox V4! Style this one like RPG character menus -->
-<body>
-    <div class="containerIndex">
-        <img class="indexImg" src="images/menu/Index.png">
-        <h1 class="indexTitleText">KamVox</h1>
-        <a href="http://kamvox.com/commercial"><h2 class="indexFlashText">Click here to Start</h2></a>
-    </div>
-    
-</body>
+	<head>
+		<title>KamVox</title>
+		<link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="main.css">
+		<meta name="description" content="Portfolio site for Kameron Watson's voice work">
+		<meta name="author" content="Kameron Watson">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	</head>
+	<body>
+		<!-- Main Container -->
+		<div class="mainbody">
+			<div class="header">
+				<a href="https://www.kamvox.com"><h1 style="float:left;">kamvox</h1></a>
+				<a href="https://twitter.com/CasualKameron"><img class="icon" src="media\twitterLogo.png"></a>
+				<a href="https://www.youtube.com/channel/UCiV3TPBff7y4JNF7r3g5OLQ"><img style="margin-top:0.45rem;" class="icon" src="media\youtubeLogo.png"></a>
+				<a href="https://www.imdb.com/name/nm9330677/"><img class="icon" src="media\imdbLogo.png"></a>
+			</div>
+		
+			<!-- title -->
+			<div class="title">
+				<h1 class="title">kameron watson</h1>
+				<h2 class="subtitle">voices for the outside of your head</h2>
+				<img src="media\kamFace.svg" style="width:36%;">
+			</div>
+			
+			<!-- Content -->
+			<div id="reels">
+				<h1>reels</h1>
+			</div>
+			
+			<div id="testimonials">
+				<h1>testimonials</h1>
+			</div>
+			
+			<div>
+				<h1>training</h1>
+				<div class="content">
+					<ul>
+						<li><b>griffin puatu</b></li>
+						<li><b>june yoon</b></li>
+						<li><b>joe atack</b></li>
+					</ul>
+				</div>
+			</div>
+			
+			<div>
+				<h1>studio</h1>
+				<div class="content">
+					<ul>
+						<li><p><b>focusrite scarlett 2i2</b> interface</p></li>
+						<li><p><b>mkh 416</b> microphone</p></li>
+						<li><p><b>mxl v57m</b> microphone</p></li>
+						<li><p><b>zoom h6</b> microphone/interface</p></li>
+						<li><p><b>dbx 286s</b> channel strip</p></li>
+					</ul>
+				</div>
+			</div>
+			
+			<div>
+				<h1>contact & social</h1>
+				<div class="content">
+					<ul>
+						<li><p><b>email:</b> kam@kamvox.com</p></li>
+						<li><p><b>twitter:</b> <a href="https://twitter.com/CasualKameron">@CasualKameron</a></p></li>
+						<li><p><b>youtube:</b> <a href="https://www.youtube.com/channel/UCiV3TPBff7y4JNF7r3g5OLQ"> kameron makes a video</a></p></li>
+						<li><p><b>imdb:</b> <a href="https://www.imdb.com/name/nm9330677/"> kameron watson</a></p></li>
+					</ul>
+				</div>
+			</div>
+			
+			<div style="padding-top:8rem;">
+				<a href="https://www.kamvox.com/old"><p>link to the old site</p></a>
+				<p>website by kameron watson</p>
+			</div>
+		</div>
+	</body>
 </html>
