--- a/old.html
+++ b/old.html
@@ -3,7 +3,7 @@
 <head>
     <title>KamVox</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="old.css">
     <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
 </head>
     <!-- Kamvox V4! Style this one like RPG character menus -->
