--- a/index.html
+++ b/index.html
@@ -33,6 +33,18 @@
 			
 			<div id="testimonials">
 				<h1>testimonials</h1>
+				<!-- <div class="quotebox"> -->
+					<!-- <p><b>john smith</b> director</p> -->
+					<!-- <div class="quote"> -->
+						<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc pharetra placerat auctor. Donec pharetra justo vel quam volutpat, vitae tincidunt odio tempor. Maecenas at felis eu arcu dapibus consequat. Suspendisse et ligula id lorem luctus pellentesque ut vitae quam. Nulla lorem enim, elementum nec feugiat ac, venenatis vel sem. Fusce pretium neque felis, non sollicitudin nisl tincidunt in. Pellentesque in eros quam. Nam in malesuada risus. In elementum urna ut nulla varius, quis laoreet felis pellentesque. Fusce sagittis blandit sapien. In facilisis sed magna non eleifend.</p> -->
+					<!-- </div> -->
+				<!-- </div> -->
+				<!-- <div class="quotebox"> -->
+					<!-- <p><b>john smith</b> director</p> -->
+					<!-- <div class="quote"> -->
+						<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc pharetra placerat auctor. Donec pharetra justo vel quam volutpat, vitae tincidunt odio tempor. Maecenas at felis eu arcu dapibus consequat. Suspendisse et ligula id lorem luctus pellentesque ut vitae quam. Nulla lorem enim, elementum nec feugiat ac, venenatis vel sem. Fusce pretium neque felis, non sollicitudin nisl tincidunt in. Pellentesque in eros quam. Nam in malesuada risus. In elementum urna ut nulla varius, quis laoreet felis pellentesque. Fusce sagittis blandit sapien. In facilisis sed magna non eleifend.</p> -->
+					<!-- </div> -->
+				<!-- </div> -->
 			</div>
 			
 			<div>
@@ -40,7 +52,7 @@
 				<div class="content">
 					<ul>
 						<li><b>griffin puatu</b></li>
-						<li><b>june yoon</b></li>
+						<!-- <li><b>june yoon</b></li> -->
 						<li><b>joe atack</b></li>
 					</ul>
 				</div>
