Removed Old Site. Added Booth Demo. Added Logo. Updated formatting on bigger and smaller screens

--- a/index.html
+++ b/index.html
@@ -13,41 +13,57 @@
 		<!-- Main Container -->
 		<div class="mainbody">
 			<div class="header">
-				<a href="https://www.kamvox.com"><h1 style="float:left;">kamvox</h1></a>
+				<a href="https://www.kamvox.com"><img src="media/KVLogo.svg" style="max-width:87px; float:left; padding-right: 2rem;"><h1 style="float:left;">kamvox</h1></a>
 				<a href="https://twitter.com/CasualKameron"><img class="icon" src="media\twitterLogo.png"></a>
 				<a href="https://www.youtube.com/channel/UCiV3TPBff7y4JNF7r3g5OLQ"><img style="margin-top:0.45rem;" class="icon" src="media\youtubeLogo.png"></a>
 				<a href="https://www.imdb.com/name/nm9330677/"><img class="icon" src="media\imdbLogo.png"></a>
 			</div>
 		
+			
 			<!-- title -->
 			<div class="title">
 				<h1 class="title">kameron watson</h1>
 				<h2 class="subtitle">voices for the outside of your head</h2>
-				<img src="media\kamFace.svg" style="width:36%;">
 			</div>
 			
 			<!-- Content -->
-			<div id="reels">
-				<h1>reels</h1>
+			<div class="topshelf">
+				<img class="kamface" src="media\kamFace.svg">
+				
+				<div id="reels">
+					<h1>reels</h1>
+					<div class="content">
+						<ul>
+							<li>
+								<p><b>Raw Booth Sound Demo</b></p> 
+								<audio controls>
+									<source src="media\Audio\RawBoothAudio.mp3" type="audio/mpeg">
+										Your Browser does not support the HTML Audio element
+								</audio>
+							</li>
+						</ul>
+					</div>
+				</div>
 			</div>
 			
-			<div id="testimonials">
-				<h1>testimonials</h1>
+			
+			<!-- <div id="testimonials"> -->
+				<!-- <h1>testimonials</h1> -->
 				<!-- <div class="quotebox"> -->
-					<!-- <p><b>john smith</b> director</p> -->
+					<!-- <p><b>> john smith</b> director</p> -->
 					<!-- <div class="quote"> -->
 						<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc pharetra placerat auctor. Donec pharetra justo vel quam volutpat, vitae tincidunt odio tempor. Maecenas at felis eu arcu dapibus consequat. Suspendisse et ligula id lorem luctus pellentesque ut vitae quam. Nulla lorem enim, elementum nec feugiat ac, venenatis vel sem. Fusce pretium neque felis, non sollicitudin nisl tincidunt in. Pellentesque in eros quam. Nam in malesuada risus. In elementum urna ut nulla varius, quis laoreet felis pellentesque. Fusce sagittis blandit sapien. In facilisis sed magna non eleifend.</p> -->
 					<!-- </div> -->
 				<!-- </div> -->
 				<!-- <div class="quotebox"> -->
-					<!-- <p><b>john smith</b> director</p> -->
+					<!-- <p><b>> john smith</b> director</p> -->
 					<!-- <div class="quote"> -->
 						<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc pharetra placerat auctor. Donec pharetra justo vel quam volutpat, vitae tincidunt odio tempor. Maecenas at felis eu arcu dapibus consequat. Suspendisse et ligula id lorem luctus pellentesque ut vitae quam. Nulla lorem enim, elementum nec feugiat ac, venenatis vel sem. Fusce pretium neque felis, non sollicitudin nisl tincidunt in. Pellentesque in eros quam. Nam in malesuada risus. In elementum urna ut nulla varius, quis laoreet felis pellentesque. Fusce sagittis blandit sapien. In facilisis sed magna non eleifend.</p> -->
 					<!-- </div> -->
 				<!-- </div> -->
-			</div>
+			<!-- </div> -->
 			
-			<div>
+			<div id="training">
 				<h1>training</h1>
 				<div class="content">
 					<ul>
@@ -58,20 +74,20 @@
 				</div>
 			</div>
 			
-			<div>
+			<div id="studio">
 				<h1>studio</h1>
 				<div class="content">
 					<ul>
 						<li><p><b>focusrite scarlett 2i2</b> interface</p></li>
-						<li><p><b>mkh 416</b> microphone</p></li>
-						<li><p><b>mxl v57m</b> microphone</p></li>
 						<li><p><b>zoom h6</b> microphone/interface</p></li>
-						<li><p><b>dbx 286s</b> channel strip</p></li>
+						<li><p><b>dbx 286s</b> preamp/channel strip</p></li>
+						<li><p><b>mkh 416</b> primary microphone</p></li>
+						<li><p><b>mxl v57m</b> microphone</p></li>
 					</ul>
 				</div>
 			</div>
 			
-			<div>
+			<div id="contact">
 				<h1>contact & social</h1>
 				<div class="content">
 					<ul>
@@ -83,8 +99,7 @@
 				</div>
 			</div>
 			
-			<div style="padding-top:8rem;">
-				<a href="https://www.kamvox.com/old"><p>link to the old site</p></a>
+			<div style="padding-top:6rem;">
 				<p>website by kameron watson</p>
 			</div>
 		</div>
