Added Interactive Media Demo

--- a/index.html
+++ b/index.html
@@ -34,7 +34,14 @@
 					<div class="content">
 						<ul>
 							<li>
-								<p><b>Raw Booth Sound Demo</b></p> 
+								<p><b>interactive media demo</b></p> 
+								<audio controls>
+									<source src="media\Audio\KamGameDemo.mp3" type="audio/mpeg">
+										Your Browser does not support the HTML Audio element
+								</audio>
+							</li>
+							<li>
+								<p><b>booth sound demo</b></p> 
 								<audio controls>
 									<source src="media\Audio\RawBoothAudio.mp3" type="audio/mpeg">
 										Your Browser does not support the HTML Audio element
