--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title>KamVox</title>
 		<link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="main.css">
+		<link rel="icon" type="image/png" href="media/KVicon.png">
 		<meta name="description" content="Portfolio site for Kameron Watson's voice work">
 		<meta name="author" content="Kameron Watson">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
