Updated studio equipment list

--- a/index.html
+++ b/index.html
@@ -85,11 +85,10 @@
 				<h1>studio</h1>
 				<div class="content">
 					<ul>
-						<li><p><b>focusrite scarlett 2i2</b> interface</p></li>
-						<li><p><b>zoom h6</b> microphone/interface</p></li>
-						<li><p><b>dbx 286s</b> preamp/channel strip</p></li>
 						<li><p><b>mkh 416</b> primary microphone</p></li>
-						<li><p><b>mxl v57m</b> microphone</p></li>
+						<li><p><b>dbx 286s</b> preamp/channel strip</p></li>
+						<li><p><b>ssl2</b> interface</p></li>
+						<li><p><b>zoom h6</b> microphone/interface</p></li>
 					</ul>
 				</div>
 			</div>
