Fixed Twitter link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<div class="mainbody">
 			<div class="header">
 				<a href="https://www.kamvox.com"><img src="media/KVLogo.svg" style="max-width:87px; float:left; padding-right: 2rem;"><h1 style="float:left;">kamvox</h1></a>
-				<a href="https://twitter.com/CasualKameron"><img class="icon" src="media\twitterLogo.png"></a>
+				<a href="https://twitter.com/Kamvox"><img class="icon" src="media\twitterLogo.png"></a>
 				<a href="https://www.youtube.com/channel/UCiV3TPBff7y4JNF7r3g5OLQ"><img style="margin-top:0.45rem;" class="icon" src="media\youtubeLogo.png"></a>
 				<a href="https://www.imdb.com/name/nm9330677/"><img class="icon" src="media\imdbLogo.png"></a>
 			</div>
@@ -98,7 +98,7 @@
 				<div class="content">
 					<ul>
 						<li><p><b>email:</b> kam@kamvox.com</p></li>
-						<li><p><b>twitter:</b> <a href="https://twitter.com/CasualKameron">@CasualKameron</a></p></li>
+						<li><p><b>twitter:</b> <a href="https://twitter.com/Kamvox">@Kamvox</a></p></li>
 						<li><p><b>youtube:</b> <a href="https://www.youtube.com/channel/UCiV3TPBff7y4JNF7r3g5OLQ"> kameron makes a video</a></p></li>
 						<li><p><b>imdb:</b> <a href="https://www.imdb.com/name/nm9330677/"> kameron watson</a></p></li>
 					</ul>
